--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,9 +29,20 @@ jobs:
       #- run: pip install -r requirements.txt
       #- run: pip install jupyter numpy pandas scikit-learn tabulate altair altair_viewer nbformat nbclient plotly.express
 
-      # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
-      # - name: Setup R
+      # Comment out the 2 below section if you are not using R
+      # - name: Install R
       #   uses: r-lib/actions/setup-r@v2
+      #   with:
+      #     #r-version: '4.3.2'
+      #     use-public-rspm: true
+
+      # - name: Install R Dependencies
+      #   uses: r-lib/actions/setup-r-dependencies@v2
+      #   with:
+      #     packages: 
+      #       any::tidyverse
+      #       any::knitr
+      #       any::DT
 
       # From https://github.com/julia-actions/setup-julia
       # - name: Setup Julia
